--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "vitalik74/yii2-geocode-yandex": "*",
         "moonlandsoft/yii2-phpexcel": "*",
         "mihaildev/yii2-ckeditor": "*",
-        "mihaildev/yii2-elfinder": "*"
+        "mihaildev/yii2-elfinder": "*",
+        "kartik-v/yii2-widget-datepicker": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
