--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
+        "fxp/composer-asset-plugin": ">=1.3.1",
         "yiisoft/yii2": "~2.0.6",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
@@ -22,8 +23,7 @@
         "vitalik74/yii2-geocode-yandex": "*",
         "moonlandsoft/yii2-phpexcel": "*",
         "mihaildev/yii2-ckeditor": "*",
-        "mihaildev/yii2-elfinder": "*",
-        "kartik-v/yii2-widget-datepicker": "@dev"
+        "mihaildev/yii2-elfinder": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
